Fix CSS for spacing
* Fix CSS for spacing.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -134,6 +134,7 @@ body {
 
 .container .header table.site-title {
     width: 100%;
+    border-spacing: 0;
 }
 
 .container .header table.site-title td {
